# ovisbot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ovisbot/: __main__.py  bot.py  db_models.py  error_handling.py  events.py  locale.py
ovisbot/commands/: base.py  manage.py  rank.py
ovisbot/extensions/ctf/: ctf.py
